# arena-allocator

./: AGENTS.md  README.md  meson.build  meson_options.txt
.github/workflows/: ci.yml
config/: arena_cfg.h  arena_version.h.in
include/: arena.h  arena_cfg.h
src/: arena.c
tests/: install_smoke_consumer.c  meson.build  run_install_smoke.py  test_arena.c  test_arena.h  test_arena_allocation.c  test_arena_api.c  test_arena_markers.c  test_arena_poison.c
